# kdb-haskell

./: .ghci  .gitattributes  .gitignore  .travis.yml  CONTRIBUTING.md  LICENSE  Makefile  Makefile_alexhappy  README.md  Setup.hs  cabal.config  cabal.config.back  kdb-haskell.cabal  shell.nix  stack.yaml  use-stackage.sed
.travis/: install-stack.sh
benchmarks/: Benchmark.hs
c/: k.h
kdb-c/: k.c
src/Database/: Kdb.hs
src/Database/Kdb/: Types.hs
src/Database/Kdb/Internal/: C.chs  C.hs  Client.hs  DateTimeTypes.hs  IPC.hs  Types.hs
src/Database/Kdb/Internal/Types/: ClientTypes.hs  DateTimeTypes.hs  KdbTypes.hs
src/Language/Q/: Lexer.x  Parser.ly  Parser.y  Types.hs
tests/: Test.hs
tests/Database/Kdb/: TypesTest.hs
tests/Database/Kdb/Internal/: ClientTest.hs  DateTimeTypesTest.hs  IPCTest.hs  IntegrationTest.hs  TestUtils.hs  TypesTest.hs
tests/Database/Kdb/Internal/Types/: DateTimeTypesTest.hs
tests/Language/Q/: LexerTest.hs
tools/kdb/: README.txt  mac32.sh  q.k  users.txt
tools/kdb/m32/: q
