name:               kdb-haskell
version:            0.1.0
synopsis:           Haskell bindings for KDB+.
description:        This package implements binding for KDB+ database (kx.com) in Haskell.
category:           Finance, Database
homepage:           https://github.com/jkozlowski/kdb-haskell
bug-reports:        https://github.com/jkozlowski/kdb-haskell/issues
license-file:       LICENSE
license:            MIT

author:             Jakub Kozlowski
copyright:          2014 Jakub Kozlowski <mail@jakub-kozlowski.com>
maintainer:         mail@jakub-kozlowski.com

build-type:         Custom
cabal-version:      >= 1.9.2
extra-source-files: LICENCE
                    README.md
                    CONTRIBUTING.md

source-repository head
  location:
      git@github.com:jkozlowski/kdb-haskell.git
  type:
      git

flag documentation
  default:
      False

library
  exposed-modules:    
  other-modules:      Database.Kdb.Internal.Types
                    , Database.Kdb.Internal.IPC
                    , Database.Kdb.Internal.DateTimeTypes
  default-language:   Haskell2010
  build-depends:      base >= 4 && < 5
                    , deepseq
                    , cpu
                    , time
                    , attoparsec
                    , bytestring
                      -- see if possible to get rid of: necessary for the
                      -- conversions between Word32/Word64 and Float/Double.
                    , array
                    , vector
                    , QuickCheck
  hs-source-dirs:     src
  ghc-options:       -Wall
                     -fwarn-incomplete-patterns
                     -funbox-strict-fields

test-suite kdb-haskell-tests
  hs-source-dirs:     src 
                    , tests
  main-is:            Test.hs
  type:               exitcode-stdio-1.0
  build-depends:      base
                    , deepseq
                    , deepseq-generics
                    , cpu
                    , bytestring
                    , array
                    , base16-bytestring
                    , containers
                    , vector
                    , attoparsec
                    , text
                    , time
                    , timezone-series  >= 0.1.3
                    , timezone-olson
                    , tzdata == 0.1.20140612.0
                    , binary
                    , mtl
                    , lens
                    -- Testing
                    , tasty
                    , tasty-quickcheck
                    --, tasty-smallcheck
                    , tasty-hunit
                    , QuickCheck
                    , quickcheck-io
                    , network
                    , process
                    , directory
                    , system-filepath
                    , resourcet
                    , transformers
                    , retry
                    , Cabal
                    -- This needs to be disabled for now, until I figure out
                    -- why this fails to build.
                    --, hlint
  ghc-options:       -Wall
                     -O0
                     -funbox-strict-fields

benchmark kdb-haskell-benchmark
  type:               exitcode-stdio-1.0
  hs-source-dirs:     src
                    , tests
                    , benchmarks
  main-is:            Benchmark.hs
  build-depends:      base
                    , deepseq
                    , deepseq-generics
                    , cpu
                    , bytestring
                    , array
                    , base16-bytestring
                    , containers
                    , vector
                    , attoparsec
                    , text
                    , time
                    , timezone-series >= 0.1.3
                    , binary
                    , mtl
                    , lens
                    -- Benchmark deps
                    , network
                    , time
                    , criterion
                    , QuickCheck
  ghc-options:       -Wall
                     -O2
                     -funbox-strict-fields
                     -rtsopts
