
name:               kdb-haskell
version:            0.1.0
synopsis:           Haskell bindings for KDB+.
description:        This package implements binding for KDB+ database (kx.com) in Haskell.
category:           Finance, Database
homepage:           https://github.com/jkozlowski/kdb-haskell
bug-reports:        https://github.com/jkozlowski/kdb-haskell/issues
license-file:       LICENSE
license:            MIT

author:             Jakub Kozlowski
copyright:          2014 Jakub Kozlowski <mail@jakub-kozlowski.com>
maintainer:         mail@jakub-kozlowski.com

build-type:         Custom
cabal-version:      >= 1.9.2
extra-source-files:   LICENCE
                    , README.md
                    , CONTRIBUTING.md
                    , kdb-c

source-repository head
  location:
      git@github.com:jkozlowski/kdb-haskell.git
  type:
      git

library
  exposed-modules:    
  other-modules:      Database.Kdb.Internal.Types
                    , Database.Kdb.Internal.IPC
                    , Database.Kdb.Internal.C
  default-language:   Haskell2010
  build-depends:      base >= 4 && < 5
                    , mtl
                    , bytestring
                    , vector
                    , text
                    , containers
                    , binary
                    , lens
                    , QuickCheck
                    , directory
  hs-source-dirs:     src
  -- The location of the header files
  include-dirs:       c
  -- The header files to be included
  includes:           k.h
  -- Header files to install - not sure why this is necessary
  install-includes:   k.h
  ld-options:         /Users/jakubkozlowski/Programming/IntelliJ/kdb-haskell/c/m64/c.o
  ld-options:         /Users/jakubkozlowski/Programming/IntelliJ/kdb-haskell/c/m64/cst.o
  ghc-options:       -Wall
                     -fwarn-incomplete-patterns
                     -funbox-strict-fields
  build-tools:        c2hs

test-suite kdb-haskell-tests
  hs-source-dirs:     src 
                    , tests
  main-is:            Test.hs
  type:               exitcode-stdio-1.0
  build-depends:      base
                    , bytestring
                    , base16-bytestring
                    , containers
                    , vector
                    , text
                    , time
                    , binary
                    , mtl
                    , lens
                    -- Testing
                    , tasty
                    , tasty-quickcheck
                    , tasty-hunit
                    , QuickCheck
                    , Cabal
  -- The location of the header files
  include-dirs:       c
  -- The header files to be included
  includes:           k.h
  -- Header files to install - not sure why this is necessary
  install-includes:   k.h
  ld-options:         /Users/jakubkozlowski/Programming/IntelliJ/kdb-haskell/c/m64/c.o
  ld-options:         /Users/jakubkozlowski/Programming/IntelliJ/kdb-haskell/c/m64/cst.o
  ghc-Options:       -Wall
                     -O0
                     -funbox-strict-fields
  build-tools:        c2hs

benchmark kdb-haskell-benchmark
  type:               exitcode-stdio-1.0
  hs-source-dirs:     src
                    , benchmarks
  main-is:            Benchmark.hs
  build-depends:      base
                    , mtl
                    , vector
                    , bytestring
                    , network
                    , criterion
                    , random
  ghc-options:       -Wall
                     -O2
                     -funbox-strict-fields
  build-tools:        c2hs
