name:               kdb-haskell
version:            0.1.0
synopsis:           Low-level Haskell bindings for KDB+.
description:        This package implements binding for KDB+ database (kx.com) in Haskell.
                    Compression is currently not supported.
category:           Finance, Database
homepage:           https://github.com/jkozlowski/kdb-haskell
bug-reports:        https://github.com/jkozlowski/kdb-haskell/issues
license-file:       LICENSE
license:            MIT

author:             Jakub Kozlowski
copyright:          2014 Jakub Kozlowski <mail@jakub-kozlowski.com>
maintainer:         mail@jakub-kozlowski.com

build-type:         Custom
cabal-version:      >= 1.9.2
extra-source-files: LICENCE
                    README.md
                    CONTRIBUTING.md

source-repository head
  location:
      git@github.com:jkozlowski/kdb-haskell.git
  type:
      git

flag documentation
  default:
      False

library
  exposed-modules:    Database.Kdb
  other-modules:      Database.Kdb.Internal.Types.KdbTypes
                    , Database.Kdb.Internal.Types.DateTimeTypes
                    , Database.Kdb.Internal.Types.ClientTypes
                    , Database.Kdb.Internal.IPC
                    , Database.Kdb.Internal.Client
  default-language:   Haskell2010
  build-depends:      base >= 4 && < 5, transformers
                    , deepseq
                    , network, io-streams, exceptions, blaze-builder, attoparsec
                    , cpu
                    , time
                    , bytestring
                    , data-default-class, lens
                      -- see if possible to get rid of: necessary for the
                      -- conversions between Word32/Word64 and Float/Double.
                    , array, vector
                      -- Necessary to provide instances for testing.
                    , QuickCheck
  hs-source-dirs:     src
  ghc-options:       -Wall
                     -fwarn-incomplete-patterns
                     -funbox-strict-fields

test-suite kdb-haskell-tests
  hs-source-dirs:     src 
                    , tests
  main-is:            Test.hs
  type:               exitcode-stdio-1.0
  build-depends:      base >= 4 && < 5, transformers
                    , deepseq
                    , network, io-streams, exceptions, blaze-builder, attoparsec
                    , cpu
                    , time
                    , bytestring
                    , data-default-class, lens
                      -- see if possible to get rid of: necessary for the
                      -- conversions between Word32/Word64 and Float/Double.
                    , array, vector
                    -- Testing
                    , base16-bytestring
                    , tasty
                    , tasty-quickcheck
                    , tasty-hunit
                    , QuickCheck
                    , quickcheck-io
                    , network
                    , process
                    , directory
                    , system-filepath
                    , resourcet
                    , transformers
                    , retry
                    , Cabal
  ghc-options:       -Wall
                     -O0
                     -funbox-strict-fields

benchmark kdb-haskell-benchmark
  type:               exitcode-stdio-1.0
  hs-source-dirs:     src
                    , tests
                    , benchmarks
  main-is:            Benchmark.hs
  build-depends:      base >= 4 && < 5, transformers
                    , deepseq
                    , network, io-streams, exceptions, blaze-builder, attoparsec
                    , cpu
                    , time
                    , bytestring
                    , data-default-class, lens
                      -- see if possible to get rid of: necessary for the
                      -- conversions between Word32/Word64 and Float/Double.
                    , array, vector
                      -- Necessary to provide instances for testing.
                    , QuickCheck
                    -- Benchmark deps
                    , network
                    , criterion
                    , QuickCheck
                    -- Testing
                    , base16-bytestring
                    , tasty
                    , tasty-quickcheck
                    , tasty-hunit
                    , QuickCheck
                    , quickcheck-io
                    , network
                    , process
                    , directory
                    , system-filepath
                    , resourcet
                    , transformers
                    , retry
                    , Cabal
  ghc-options:       -Wall
                     -O2
                     -funbox-strict-fields
                     -rtsopts
